оставил в ответе тайтла только динамические поля
